--- a/Prefectures/src/main/resources/templates/prefectures/list.html
+++ b/Prefectures/src/main/resources/templates/prefectures/list.html
@@ -54,7 +54,7 @@
 			</div>
 		</fieldset>
 	</form>
-	<hr/>
+	<hr>
 	<table class="table table-striped table-bordered table-condensed">
 		<tr>
 			<th>都道府県コード</th>
@@ -67,18 +67,18 @@
 			<td th:text="${prefecture.prefecture_code}">99</td>
 			<td th:text="${prefecture.prefecture_name}">福岡県</td>
 			<td th:text="${prefecture.prefecture_name_ank}">fukuoka</td>
-			<!-- td th:text="${prefecture.user.username}">duke</td-->
-			<td th:text="${prefecture.area.area_name}">地方</td>
+			<td th:text="${prefecture.prefecture_area_code}">9</td>
+			<!-- td th:text="${prefecture.area.area_name}">地方</td-->
 			<td>
 				<form th:action="@{/prefectures/edit}" method="get">
-					<input class="btn btn-default" type="submit" name="form" value="編集"/>
-					<input type="hidden" name="id" th:value="${prefecture.id}"/>
+					<input class="btn btn-default" type="submit" name="form" value="編集">
+					<input type="hidden" name="id" th:value="${prefecture.id}">
 				</form>
 			</td>
 			<td>
 				<form th:action="@{/prefectures/delete}" method="post">
-					<input class="btn btn-danger" type="submit" value="削除"/>
-					<input type="hidden" name="id" th:value="${prefecture.id}"/>
+					<input class="btn btn-danger" type="submit" value="削除">
+					<input type="hidden" name="id" th:value="${prefecture.id}">
 				</form>
 			</td>
 		</tr>
