--- a/Prefectures/src/main/resources/templates/layout.html
+++ b/Prefectures/src/main/resources/templates/layout.html
@@ -3,26 +3,25 @@
 		xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 		xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-	<meta charset="UTF-8"/>
+	<meta charset="UTF-8">
 	<title>layout</title>
 	<link rel="stylesheet"
 			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}"/>
+			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}">
 	<link rel="stylesheet"
 			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap-theme.min.css}"/>
+			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap-theme.min.css}">
 </head>
 <body>
 <div class="container">
 	<h1>都道府県名一覧システム</h1>
-<!--
 	<p>
 		<span sec:authentication="principal.user.username">duke</span>さんログイン中。
 	</p>
 	<form th:action="@{/logout}" method="post">
-		<input type="submit" class="btn btn-default btn-xs" value="ログアウト"/>
+		<input type="submit" class="btn btn-default btn-xs" value="ログアウト">
 	</form>
--->
+	<hr>
 	<div layout:fragment="content">
 		Fake content
 	</div>
