--- a/Prefectures/src/main/resources/templates/prefectures/edit.html
+++ b/Prefectures/src/main/resources/templates/prefectures/edit.html
@@ -4,13 +4,13 @@
 		layout:decorator="layout">
 <head>
 	<meta charset="UTF-8">
-	<title>都道府県名一覧</title>
+	<title>都道府県名編集</title>
 </head>
 <body>
 <div layout:fragment="content" class="col-sm-12">
-	<form th:action="@{/prefectures/create}" th:object="${prefectureForm}" class="form-horizontal" method="post">
+	<form th:action="@{/prefectures/edit}" th:object="${prefectureForm}" class="form-horizontal" method="post">
 		<fieldset>
-			<legend>都道府県名新規作成</legend>
+			<legend>都道府県名編集</legend>
 			<div class="form-group" th:classappend="${#fields.hasErrors('prefecture_code')}? 'has-error has-feedback'">
 				<label for="prefecture_code" class="col-sm-2 control-label">都道府県コード</label>
 				<div class="col-sm-10">
@@ -49,41 +49,13 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-primary">作成</button>
+					<input type="submit" class="btn btn-default" name="goToTop" value="戻る"/>
+					<input type="hidden" name="id" th:value="${param.id[0]}"/>
+					<input type="submit" class="btn btn-primary" value="更新"/>
 				</div>
 			</div>
 		</fieldset>
 	</form>
-	<hr>
-	<table class="table table-striped table-bordered table-condensed">
-		<tr>
-			<th>都道府県コード</th>
-			<th>都道府県名</th>
-			<th>ローマ字</th>
-			<th>地域</th>
-			<th>更新者</th>
-			<th colspan="2">編集</th>
-		</tr>
-		<tr th:each="prefecture : ${prefectures}">
-			<td th:text="${prefecture.prefecture_code}">99</td>
-			<td th:text="${prefecture.prefecture_name}">福岡県</td>
-			<td th:text="${prefecture.prefecture_name_ank}">fukuoka</td>
-			<td th:text="${prefecture.prefecture_area_code}">9</td>
-			<td th:text="${prefecture.user.username}">duke</td>
-			<td>
-				<form th:action="@{/prefectures/edit}" method="get">
-					<input class="btn btn-default" type="submit" name="form" value="編集">
-					<input type="hidden" name="id" th:value="${prefecture.id}">
-				</form>
-			</td>
-			<td>
-				<form th:action="@{/prefectures/delete}" method="post">
-					<input class="btn btn-danger" type="submit" value="削除">
-					<input type="hidden" name="id" th:value="${prefecture.id}">
-				</form>
-			</td>
-		</tr>
-	</table>
 </div>
 </body>
 </html>
