--- a/Prefectures/src/main/resources/templates/layout.html
+++ b/Prefectures/src/main/resources/templates/layout.html
@@ -6,11 +6,11 @@
 	<meta charset="UTF-8">
 	<title>layout</title>
 	<link rel="stylesheet"
-			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}">
+			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+			th:href="@{/webjars/bootstrap/4.1.1/css/bootstrap.min.css}">
 	<link rel="stylesheet"
-			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap-theme.min.css}">
+			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap-theme.min.css"
+			th:href="@{/webjars/bootstrap/4.1.1/css/bootstrap-theme.min.css}">
 </head>
 <body>
 <div class="container">
@@ -18,7 +18,7 @@
 	<p>
 		<span sec:authentication="principal.user.username">duke</span>さんログイン中。
 	</p>
-	<form th:action="@{/logout}" method="post">
+	<form th:action="@{/logout}" method="post" class="form-inline">
 		<input type="submit" class="btn btn-default btn-xs" value="ログアウト">
 	</form>
 	<hr>
