--- a/Prefectures/src/main/resources/templates/loginForm.html
+++ b/Prefectures/src/main/resources/templates/loginForm.html
@@ -4,26 +4,26 @@
 	<meta charset="UTF-8"/>
 	<title>ログインフォーム</title>
 	<link rel="stylesheet"
-			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}"/>
+			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+			th:href="@{/webjars/bootstrap/4.1.1/css/bootstrap.min.css}"/>
 	<link rel="stylesheet"
-			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css"
-			th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap-theme.min.css}"/>
+			href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap-theme.min.css"
+			th:href="@{/webjars/bootstrap/4.1.1/css/bootstrap-theme.min.css}"/>
 </head>
 <body>
 <div class="container">
 	<h1>都道府県名一覧システム</h1>
-	<form class="form-signin" method="post" th:action="@{/login}">
+	<form class="form-signin p-4" method="post" th:action="@{/login}">
 		<h2 class="form-signin-heading">ログインフォーム</h2>
 
 		<div th:if="${param.error}" class="alert alert-danger">
 			ユーザ名またはパスワードが正しくありません。
 		</div>
 		<input type="text" class="form-control" name="username" placeholder="Username"
-				required="required" autofocus="autofocus"/>
+				required="required" autofocus="autofocus" style="width:20em;">
 		<input type="password" class="form-control" name="password" placeholder="Password"
-				required="required"/>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+				required="required" style="width:20em;">
+		<button class="btn btn-lg btn-primary" type="submit">Sign in</button>
 	</form>
 </div>
 </body>
